<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- title top start -->
    <string name="local_media">Local videos</string>
    <string name="count_ge_favorite">%d starred</string>
    <!-- title top end -->
    
    <!-- access user data stream start -->
    <string name="userdata_alert_title">Data usage</string>
    <string name="userdata_alert_content">You are currently using data network, may produce a lot of traffic fees, sure you want to continue?</string>
    <string name="userdata_alert_ok">Continue</string>
    <string name="check_network">"Can't connect to the network. Check your data connection and try again."</string>
    <!-- access user data stream end -->
    
    <!-- search result start -->
    <string name="search">Search</string>
    <string name="count_get_result">%d results</string>
    <string name="search_result_input_hint">Please input search key word</string>
    <string name="search_result_hint">%s&#160;&#160;search results</string>
    <string name="search_result_empty_text">Nothing found</string>
    <string name="search_result_recommend_hint">Guess you like：</string>
    <string name="search_result_recommend_empty">Couldn\'t find anything.</string>
    <!-- search result end -->
    
    <!-- home start -->
    <string name="online_video">Online</string>
    <string name="my_video">Local</string>
    <string name="search_online_video">Search online video</string>
    
    <string name="declaration_content">Do you accept the <a href="http://www.youku.com/pub/youku/service/agreement.shtml#agr1">terms of use</a> stipulated by Sohu Video, iQiyi, and other video content providers?</string>
    <string name="declaration">Terms of use</string>
    <string name="no_longer_tips">Don\'t show again</string>
    <!-- home end -->
    
    <!-- online video start -->
    <string name="more">More</string>
    <!-- online video end -->
    
    <!-- local video start -->
    <string name="play_history">Recently played</string>
    <string name="my_favorite">Starred</string>
    <string name="local_video">Local</string>
    <string name="offline_video">offline</string>
    <string name="hot_special">Hot Special</string>
    <string name="shared_devices">Shared Devices</string>
    <string name="play_his_empty_hint">No history</string>
    <string name="delete">Delete</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <!-- local video end -->
    
    <!-- local media start -->
    <string name="imports">Import</string>
    <string name="local_media_empty_hint">No local videos</string>
    <!-- local media end -->
    
    <!-- local favorite start -->
    <string name="edit">Edit</string>
    <string name="local_favorite_empty_hint">Not starred</string>
    <string name="unfavorite">Unstar</string>
    <!-- local favorite end -->
    
    <!-- share device start -->
    <string name="device_empty_hint">Empty</string>
    <!-- share device end -->
    
    <!-- share device media start -->
    <string name="device_media_empty_hint">Empty</string>
    <!-- share device media end -->
    
    <!-- media detail start -->
    <string name="play">Play</string>
    <string name="episode">Episode</string>
    <string name="introduce">Summary</string>
    <string name="comment">Comments</string>
    <string name="recommend">Recommend</string>
    
    <string name="director_colon">Director：</string>
    <string name="actor_colon">Actor：</string>
    <string name="area_colon">Country：</string>
    <string name="time_colon">Date：</string>
    <string name="type_colon">Genre：</string>
    
    <string name="detail_episode_empty_hint">No episode</string>
    <string name="detail_introduce_empty_hint">No inroduce</string>
    <string name="detail_review_list_empty_hint">No comment</string>
    <string name="detail_recommend_empty_hint">No recommend</string>
    
    <string name="write_comment">Add comment</string>
    <string name="see_all_count_comment">%d more comments</string>
    
    <string name="offline">Offline</string>
    
    <string name="add_favorite_success">Starred</string>
    <string name="cancel_favorite_success">Unstarred</string>
    <!-- media detail end -->
    
    <!-- local detail start -->
    <string name="local_detail_more">%d more videos</string>
    <!-- local detail end -->
    
    <!-- channel start -->
    <string name="choice">Hot</string>
    <string name="rank">Rank</string>
    <string name="all">All</string>
    
    <string name="filter">Filter</string>
    
    <string name="channel_choice_empty_hint">No hot videos</string>
    <string name="channel_all_empty_hint">No videos</string>
    <!-- channel end -->
    
    <!-- Tv start -->
    <string name="tv_channel_empty_hint">No channels</string>
    <!-- Tv end -->
    
    <!-- Tv player start -->
    <string name="defaults">Default</string>
    <string name="fullscreen">Fullscreen</string>
    <!-- Tv player end -->
    
    <!-- feature list start -->
    <string name="feature">Featured</string>
    <string name="count_ge_feature">%d items</string>
    <string name="feature_list_empty_hint">No feature list</string>
    <!-- feature list end -->
    
    <!-- feature media start -->
    <string name="feature_media_empty_hint">No featrue videos</string>
    <string name="count_ge_feature_media">%d items</string>
    <!-- feature media end -->
    
    <!-- score status view start -->
    <string name="percent_status">%.1f%%</string>
    <!-- score status view end -->
    
    <!-- comment review start -->
    <string name="back">back</string>
    <string name="edit_comment">Add comment</string>
    <string name="average_score">Average score</string>
    <string name="count_comment">%d ratings</string>
    <string name="count_comment_wan">%.2f0 thousand ratings</string>
    <string name="avg_score">%.1f</string>
    <string name="all_comment">All comment</string>
    <string name="positive_comment">Favorable comment</string>
    <string name="negative_comment">Poor comment</string>
    <string name="comment_review_list_empty_hint">No comment</string>
    <string name="xiaomi_user">User</string>
    <!-- comment review end -->
    
    <!-- comment edit start -->
    <string name="send">Submit</string>
    <string name="media_name_comment">%s comment</string>
    <string name="comment_edit_et_hint">Please input comment</string>
    <string name="comment_edit_blog_hint">Release to sina</string>
    <string name="comment_edit_start_hint">Click the stars to rate:</string>
    
    <string name="comment_count_less_tip">You should enter at least d% characters</string>
    <string name="comment_count_much_tip">Your comment cannot exceed d% characters</string>
    
    <string name="click_star_rate">Click on the star rating</string>
    <!-- comment edit end -->
    
    <!-- download start -->
    <string name="offline_no_source">No available caching source</string>
    <string name="download_is_in_tasklist">Has been in caching list</string>
    <string name="download_is_success">Has been cached</string>
    <string name="download_add_success">Add download task success</string>
    <string name="offline_no_wifi">You are not using wifi, please check the cellular option in the setting page if you want to cache now.</string>
    
    <string name="offline_alert_title">Caching Notification</string>
    <string name="good">OK</string>
    <string name="offline_alert_wifi">You are using cellular network, to save your data usage, the caching tasks are paused and will be continue after you switch to wifi network.</string>
    <!-- download end -->
    
    <!-- download select start -->
    <string name="select_offline_media">Select offline media cache</string>
    <string name="manage_offline_media">Manage offline media cache</string>
    <string name="manage">Manage</string>
    <string name="done">Done</string>
    <string name="download_select_more">Cahce more</string>
    <!-- download select end -->
    
    <!-- action mode start -->
    <string name="select_all">Select all</string>
    <string name="select_none">Deselect all</string>
    <string name="select_count_xiang">%d selected</string>
    <!-- action mode end -->
    
    <!-- settings start -->
    <string name="setting">Settings</string>
    <string name="offline_setting">Offline media</string>
    <string name="use_cellular_network">Use mobile data connection</string>
    <string name="use_cellular_network_summary">Use mobile data connection to download videos. This may increase your data usage.</string>
	<string name="mipush_setting">Xiaomi push</string>
	<string name="receive_mipush">Receive xiaomi push</string>
	<string name="receive_mipush_summary">Receive notifications about new and updated online content</string>
    <string name="other_setting">Other</string>
    <string name="clear_cache">Clear image cache</string>
    <string name="clear_cache_summary">Clear cached images from Video browser</string>
    
    <string name="clear_cache_success">Cache cleared</string>
    <!-- settings end -->
    
    <!-- loading start -->
    <string name="loading"> <CDATA>Loading </CDATA> </string>
    <string name="reloading_tip">Couldn\'t connect to network</string>
    <string name="retry">Retry</string>
    <!-- loading end -->
    
    <!-- media view start -->
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="update">Updated</string>
    <string name="count_ji_quan">All %d Eps</string>
    <string name="update_to_count_ji">Updated to Ep. %d</string>
    <!-- media view end -->
    
    <!-- Mipush start -->
    <string name="updatedalready">Updated</string>
    <!-- Mipush end -->
    
    <!-- tv player start -->
    <string name="select_tv">Select channel</string>
    <string name="forecast">Forecast</string>
    <string name="select_tv_empty_hint">No channels</string>
    <string name="forecast_empty_hint">No programes</string>
    <string name="select_tvs">Select tv</string>
    <string name="forecasts">Forecast</string>
    <string name="key_back_down_toast">To exit, touch Back again</string>
    <!-- tv player end -->
</resources>